#25 Show menu item text correctly when overflow

--- a/app/assets/stylesheets/03_objects/menu-item.css
+++ b/app/assets/stylesheets/03_objects/menu-item.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; /* This avoid show text overflow like expected */
 
   /* Remove link defaults */
   color: var(--o-menu-item-color);
@@ -22,6 +22,10 @@
     stroke: var(--o-menu-item-active-color);
   }
 
+  & span {
+    text-align: center; /* Alternative center instead flex align-items: center to work text overflow like expected */
+  }
+
   .o-menu-item__icon {
     width: var(--o-menu-item-icon-sz);
     height: var(--o-menu-item-icon-sz);
@@ -29,7 +33,6 @@
 
   .o-menu-item__text {
     /* Prevent break work in two lines when overflow */
-    text-overflow: ellipsis;
     white-space: nowrap;
     overflow: auto;
   }
